...
                                    <constraint firstAttribute="height" constant="64" id="ogD-aV-jsS"/>
                                </constraints>
                                <state key="normal" image="plane"/>
                                <connections>
                                    <action selector="planeButtonPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="y2E-WP-wXU"/>
...
                                    <constraint firstAttribute="width" secondItem="cpT-oF-Ffq" secondAttribute="height" multiplier="1:1" id="wEg-i6-du4"/>
                                </constraints>
                                <state key="normal" image="torus"/>
                                <connections>
                                    <action selector="ringButtonPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="gYN-7d-kHb"/>
...
                                    <constraint firstAttribute="width" constant="64" id="gnQ-uz-1w3"/>
                                </constraints>
                                <state key="normal" image="cube"/>
                                <connections>
                                    <action selector="cubeButtonPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="Gdk-Cs-hVB"/>
...
                                    <constraint firstAttribute="width" secondItem="BoJ-Cq-naA" secondAttribute="height" multiplier="1:1" id="INJ-cT-aZy"/>
                                </constraints>
                                <state key="normal" image="pyramid">
                                    <color key="titleShadowColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                    <constraint firstAttribute="height" constant="64" id="WSQ-En-a3G"/>
                                </constraints>
                                <state key="normal" image="sphere"/>
                                <connections>
                                    <action selector="sphereButtonPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="vq1-fN-iYZ"/>
...
                                    <constraint firstAttribute="height" constant="64" id="gFf-h2-rPp"/>
                                </constraints>
                                <state key="normal" title="Edit" image="edit.png"/>
                                <connections>
                                    <action selector="changePaintPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="cuA-m0-nJJ"/>
...
                        <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="AR" image="ar2" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="colorSlider" destination="qrt-En-ofL" id="zmY-6U-AnK"/>
...
